@@ -1,19 +1,27 @@
 package au.edu.uts.ap.javafx;
 
-import javafx.fxml.*;
-import javafx.stage.*;
-import javafx.scene.*;
-import java.io.*;
-import java.lang.Runnable;
+import javafx.fxml.FXMLLoader;
+import javafx.scene.Parent;
+import javafx.scene.Scene;
+import javafx.stage.Stage;
+
+import java.io.IOException;
+import java.net.URL;
 
 public class ViewLoader {
 
-    private static <T> void showStage(T model, String fxml, String title, Stage stage, Runnable onStageClosed) throws IOException {
-        FXMLLoader loader = new FXMLLoader(Controller.class.getResource(fxml), null, null,
+    private static <T> void loadStage(T model, String fxml, String title, Stage stage,
+                                      Runnable onStageClosed) throws IOException {
+        URL location = ViewLoader.class.getResource(fxml);
+        if (location == null) {
+            throw new IOException("FXML resource not found: " + fxml);
+        }
+
+        FXMLLoader loader = new FXMLLoader(location, null, null,
                 type -> {
                     try {
                         @SuppressWarnings("unchecked")
-                        Controller<T> controller = (Controller<T>) type.newInstance();
+                        Controller<T> controller = (Controller<T>) type.getDeclaredConstructor().newInstance();
                         controller.model = model;
                         controller.stage = stage;
                         return controller;
@@ -22,6 +30,10 @@ public class ViewLoader {
                     }
                 });
         Parent root = loader.load();
+        if (onStageClosed != null) {
+            stage.setOnHidden(event -> onStageClosed.run());
+        }
+
         stage.setTitle(title);
         stage.setScene(new Scene(root));
         stage.sizeToScene();
@@ -29,13 +41,16 @@ public class ViewLoader {
         stage.show();
     }
 
-    public static <T> void showStage(T model, String fxml, String title, Stage stage)  {
+    public static <T> void showStage(T model, String fxml, String title, Stage stage) {
+        showStage(model, fxml, title, stage, null);
+    }
+
+    public static <T> void showStage(T model, String fxml, String title, Stage stage,
+                                     Runnable onStageClosed) {
         try {
-            showStage(model, fxml, title, stage, () -> {
-            });
-        }
-        catch (Exception e) {
-            e.printStackTrace();
+            loadStage(model, fxml, title, stage, onStageClosed);
+        } catch (IOException e) {
+            throw new IllegalStateException("Unable to load view: " + fxml, e);
         }
     }
 }
